--- a/luci-app-happynet/po/zh-cn/happynet.po
+++ b/luci-app-happynet/po/zh-cn/happynet.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-10-01\n"
-"PO-Revision-Date: 2014-10-01\n"
-"Last-Translator: 981213 <gch981213@gmail.com>\n"
+"POT-Creation-Date: 2023-05-01\n"
+"PO-Revision-Date: 2023-05-01\n"
+"Last-Translator: happyn <support@happyn.net>\n"
 "Language: zh-cn\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,10 +33,10 @@ msgid "Interface netmask"
 msgstr "接口子网掩码"
 
 msgid "Supernode Host"
-msgstr "服务节点地址(示例:vip00.happyn.cc)"
+msgstr "服务节点地址"
 
 msgid "Second Supernode Host"
-msgstr "第二Supernode节点地址"
+msgstr "第二服务节点地址"
 
 msgid "HAPPYN Community name"
 msgstr "HAPPYN 服务ID"
@@ -51,7 +51,7 @@ msgid "Make packets from LAN to other edge nodes appear to be sent from the tunn
 msgstr "使局域网发往其他边缘节点的数据包看起来像是从接口IP发出的。这也许能帮助你方便地设置防火墙"
 
 msgid "happynet Supernode Settings"
-msgstr "happynet Supernode节点设置"
+msgstr "happynet 服务节点设置"
 
 msgid "Port"
 msgstr "本地端口"
